--- a/download.html
+++ b/download.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="assets/images/marcouberweed.svg" type="image/x-icon">
   <meta name="description" content="">
   
-  <title>Download Joyleaf - The Stoner's Favorite App</title>
+  <title>Download Joyleaf Now</title>
   
 <link rel="canonical" href="download.html">
  <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style>
