--- a/download.html
+++ b/download.html
@@ -11,7 +11,7 @@
   
   <title>Download Joyleaf Now</title>
   
-<link rel="canonical" href="download.html">
+<link rel="canonical" href="download">
  <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style>
 <noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
 <link href="https://fonts.googleapis.com/css?family=Muli:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
@@ -38,17 +38,17 @@
 			
 			<!-- List -->
 			<ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-					<a class="nav-link link text-white display-4" href="index.html">
+					<a class="nav-link link text-white display-4" href="./">
 						Home</a>
-				</li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#features4-4">
+				</li><li class="nav-item"><a class="nav-link link text-white display-4" href="./#about">
 						About</a></li>
 				
 				<li class="nav-item">
-					<a class="nav-link link text-white display-4" href="index.html#gallery1-m">
+					<a class="nav-link link text-white display-4" href="./#screenshots">
 						Screenshots</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link link text-white display-4" href="index.html#contacts3-6">
+					<a class="nav-link link text-white display-4" href="./#contact">
 						Contact
 					</a>
 				</li></ul>
@@ -75,7 +75,7 @@
                                     <em></em>
                                     <em></em>
                                 </div></div>
-					<a href="index.html"></a>
+					<a href="./"></a>
 				</amp-img>
 			</span>
 			<!-- Brand -->
@@ -86,17 +86,17 @@
 			
 			<!-- List -->
 			<ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-					<a class="nav-link link text-white display-4" href="index.html">
+					<a class="nav-link link text-white display-4" href="./">
 						Home</a>
-				</li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#features4-4">
+				</li><li class="nav-item"><a class="nav-link link text-white display-4" href="./#about">
 						About</a></li>
 				
 				<li class="nav-item">
-					<a class="nav-link link text-white display-4" href="index.html#gallery1-m">
+					<a class="nav-link link text-white display-4" href="./#screenshots">
 						Screenshots</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link link text-white display-4" href="index.html#contacts3-6">
+					<a class="nav-link link text-white display-4" href="./#contact">
 						Contact
 					</a>
 				</li></ul>
