Updated Logo and Tag Line

--- a/download.html
+++ b/download.html
@@ -68,7 +68,7 @@
 		<div class="navbar-brand">
 			<!-- Logo -->
 			<span class="navbar-logo">
-				<amp-img src="assets/images/logo.svg" layout="responsive" width="45" height="45" alt="" class="mobirise-loader">
+				<amp-img src="assets/images/logo.png" layout="responsive" width="45" height="45" alt="" class="mobirise-loader">
 					<div placeholder="" class="placeholder">
                                 <div class="mobirise-spinner">
                                     <em></em>
