--- a/index.html
+++ b/index.html
@@ -69,12 +69,9 @@
 		<div class="navbar-brand">
 			<!-- Logo -->
 			<span class="navbar-logo">
-				<amp-img src="assets/images/logo.svg" layout="responsive" width="45" height="45" alt="" class="mobirise-loader">
+				<amp-img src="assets/images/logo.png" layout="responsive" width="45" height="45" alt="" class="mobirise-loader">
 					<div placeholder="" class="placeholder">
                                 <div class="mobirise-spinner">
-                                    <em></em>
-                                    <em></em>
-                                    <em></em>
                                 </div></div>
 					<a href="./"></a>
 				</amp-img>
@@ -128,13 +125,13 @@
         <div class="main-wrapper mbr-flex mbr-column flex-al-c">
             <div class="row">
                 <div class="col-left">
-                    <img class="custom-header-img" src="assets/images/screenshot.png" alt="" title="">
+                    <img class="custom-header-img" src="assets/images/screenshot.png" alt="" title="" style="margin-right: 20px">
                 </div>
                 <div class="col-right">
                     <!-- Titles -->
                     <div class="title-block mbr-py-3 mbr-white">
-                        <h2 class="mbr-white mbr-fonts-style mbr-light mbr-pb-2 display-5">SOME TAG LINE</h2>
-                        <h1 class="mbr-white mbr-fonts-style mbr-bold display-1">WELCOME TO JOYLEAF</h1>
+                        <h1 class="mbr-white mbr-fonts-style mbr-bold display-1">Reach new heights</h1>
+                        <h1 class="mbr-white mbr-fonts-style mbr-bold display-1">with Joyleaf</h1>
                     </div>
                     <!-- Button-link -->
                     <div class="mbr-section-btn mbr-pt-2 btn-custom"><a class="btn btn-white-outline display-4" href="download">DOWNLOAD NOW</a></div>
