--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <!-- Overlay -->
     <div class="mbr-overlay"></div>
     <!-- Container -->
-    <div class="container" style="margin-top: 10vh">
+    <div class="container">
         <div class="main-wrapper mbr-flex mbr-column flex-al-c">
             <div class="row">
                 <div class="col-left">
