Fixed Download Buttons

--- a/index.html
+++ b/index.html
@@ -148,17 +148,29 @@
                         </div>
                         <!-- Button-link -->
                         <div class="row download" style="display: flex;">
-                            <div class="column" style="margin-right: 20px">
+                            <div class="column" id="badge" style="margin-right: 20px">
                                 <div class="mbr-pt-1 align-center">
                                     <a href="https://www.apple.com/ca/ios/app-store/" target="_blank" class=""><img src="assets/images/app-store.svg" alt="Download on the App Store" style="width: auto; height: 60px;"></a>
                                 </div>
                             </div>
-                            <div class="column">
+                            <div class="column" id="badge">
                                 <div class="mbr-pt-1 align-center">
                                     <a href="https://play.google.com/store?hl=en" target="_blank" class=""><img src="assets/images/play-store.svg" alt="Download on the Play Store" style="width: auto; height: 60px;"></a>
                                 </div>
                             </div>
                         </div>
+                      </div>
+                    <div class="vertical-download">
+                      <div class="mbr-pt-1 align-center" style="margin-bottom: 10px">
+                        <a href="https://www.apple.com/ca/ios/app-store/" target="_blank" class="">
+                          <img src="assets/images/app-store.svg" alt="Download on the App Store" style="width: auto; height: 60px;">
+                        </a>
+                      </div>
+                      <div class="mbr-pt-1 align-center">
+                        <a href="https://play.google.com/store?hl=en" target="_blank" class="">
+                          <img src="assets/images/play-store.svg" alt="Download on the Play Store" style="width: auto; height: 60px;">
+                        </a>
+                      </div>
                     </div>
                 </div>
             </div>
