Renamed CSS File

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
     <script async custom-element="amp-image-lightbox" src="https://cdn.ampproject.org/v0/amp-image-lightbox-0.1.js"></script>
 
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
