--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <div class="container">
             <!-- Title -->
             <div class="title-block mbr-pb-5 align-center">
-                <h3 class="mbr-section-title mbr-fonts-style mbr-pb-2 mbr-bold display-2">Cannabis made simple. Finally.</h3>
+                <h3 class="mbr-section-title mbr-fonts-style mbr-pb-2 mbr-bold display-2">Cannabis. Made simple.</h3>
                 <div class="line">
                     <div class="line-line-gray">
                         <div class="line-line-color"></div>
