major ui update

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <div class="main-wrapper mbr-flex mbr-column flex-al-c">
                 <div class="row">
                     <div class="col-left">
-                        <img class="custom-header-img" src="assets/images/screenshot.png" alt="" title="" style="margin-right: 75px">
+                        <img class="custom-header-img" src="assets/images/header.png" alt="" title="" style="margin-right: 75px">
                     </div>
                     <div class="col-right">
                         <!-- Titles -->
@@ -187,12 +187,49 @@
 
         <!-- Container -->
         <div class="container">
-            <!-- Title -->
-            <div class="title-block mbr-pb-5 align-center">
-                <h3 class="mbr-section-title mbr-fonts-style mbr-pb-2 mbr-bold display-2">Cannabis. Made simple.</h3>
-                <div class="line">
-                    <div class="line-line-gray">
-                        <div class="line-line-color"></div>
+            <div class="main-wrapper mbr-flex mbr-column flex-al-c">
+                <div class="row" style="padding-bottom: 3rem">
+                    <div class="col-left">
+                        <div class="title-block mbr-py-3 mbr-white" style="margin-right: 150px">
+                            <h1 class="mbr-white mbr-fonts-style mbr-bold display-2" style="color: #212127">Discover</h1>
+                            <h1 class="mbr-white mbr-fonts-style mbr-bold display-3" style="width:300px; margin-top: 20px; margin-bottom: 20px">Instantly explore over 2,000 unique cannabis strains from around the world.</h1>
+                            <h1 class="mbr-white mbr-fonts-style mbr-bold display-3" style="width:300px; margin-top: 20px; margin-bottom: 20px">Browse their effects and flavours, so you can find strains perfect for you.</h1>
+                        </div>
+
+                    </div>
+                    <div class="col-right">
+                        <img class="custom-header-img" src="assets/images/discover.png" alt="" title="">
+
+                    </div>
+                </div>
+                <div style="text-align: center;width: 100vw; background-image: linear-gradient(to bottom right, #742BE4, #17D39B);">
+                        <div class="row" style="display: inline-block; padding-top: 3rem; padding-bottom: 3rem; ">
+                                <div class="col-left">
+                                    <img class="custom-header-img" src="assets/images/highfive.png" alt="" title="" style="margin-right: 150px">
+                                </div>
+            
+                                <div class="col-right">
+                                    <div class="title-block mbr-py-3 mbr-white">
+                                        <h1 class="mbr-white mbr-fonts-style mbr-bold display-2" style="text-align: left; color: #ffffff">Highfive</h1>
+                                        <h1 class="mbr-white mbr-fonts-style mbr-bold display-3" style="text-align: left; color: #ffffff; width:300px; margin-top: 20px; margin-bottom: 20px">Highfive searches our database to find you five strains personalized to you and shows you how strongly your interests match each strain.</h1>
+                                        <h1 class="mbr-white mbr-fonts-style mbr-bold display-3" style="text-align: left; color: #ffffff; width:300px; margin-top: 20px; margin-bottom: 20px">All within seconds.</h1>
+                                    </div>
+                                </div>
+                            </div>
+                </div>
+                
+
+                <div class="row" style="padding-top: 3rem">
+                    <div class="col-left">
+                        <div class="title-block mbr-py-3 mbr-white" style="margin-right: 150px">
+                            <h1 class="mbr-white mbr-fonts-style mbr-bold display-2" style="width:300px; color: #212127">Ratings and Reviews.</h1>
+                            <h1 class="mbr-white mbr-fonts-style mbr-bold display-3" style="width:300px; margin-top: 20px; margin-bottom: 20px">See others’ reviews of their experiences with strains that interest you and help the Joyleaf community by rating your favourites.</h1>
+                        </div>
+
+                    </div>
+                    <div class="col-right">
+                        <img class="custom-header-img" src="assets/images/reviews.png" alt="" title="">
+
                     </div>
                 </div>
             </div>
@@ -209,8 +246,8 @@
         <!-- Container -->
         <div class="container">
             <!-- Title -->
-            <div class="title-block mbr-pb-5 align-center">
-                <h3 class="mbr-section-title mbr-fonts-style mbr-pb-2 mbr-bold display-2">Contact Us</h3>
+            <div class="title-block mbr-pb-3 align-center">
+                <h3 class="mbr-section-title mbr-fonts-style mbr-pb-2 mbr-bold display-5">Contact Us</h3>
 
                 <div class="line">
                     <div class="line-line-gray">
