--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/icon.png" type="image/x-icon">
     <meta name="description" content="">
 
     <title>Joyleaf</title>
@@ -222,7 +222,7 @@
                 <div class="row" style="padding-top: 3rem">
                     <div class="col-left">
                         <div class="title-block mbr-py-3 mbr-white" style="margin-right: 150px">
-                            <h1 class="mbr-white mbr-fonts-style mbr-bold display-2" style="width:300px; color: #212127">Ratings and Reviews.</h1>
+                            <h1 class="mbr-white mbr-fonts-style mbr-bold display-2" style="width:300px; color: #212127">Ratings and Reviews</h1>
                             <h1 class="mbr-white mbr-fonts-style mbr-bold display-3" style="width:300px; margin-top: 20px; margin-bottom: 20px">See others’ reviews of their experiences with strains that interest you and help the Joyleaf community by rating your favourites.</h1>
                         </div>
 
@@ -292,6 +292,11 @@
                     <div class="column column1">
                         <!-- Title-column  -->
                         <h5 class="mbr-fonts-style mbr-bold mbr-pb-3 title-column display-4 align-left">JOYLEAF</h5>
+                        <div class="b-links-1 align-left">
+                                <p class="text-column mbr-fonts-style mbr-regular mbr-py-1 display-4"><a href="terms" class="text-info">Terms and Conditions</a></p>
+                                <p class="text-column mbr-fonts-style mbr-regular mbr-py-1 display-4"><a class="text-info">Privacy Policy</a></p>
+                                <p class="text-column mbr-fonts-style mbr-regular mbr-py-1 display-4"></p>
+                            </div>
                         <!-- Content-column -->
                         <p class="text-column mbr-fonts-style mbr-light display-4"></p>
                     </div>
@@ -339,7 +344,7 @@
 
             <div class="copyright mbr-px-2 mbr-flex mbr-jc-c">
                 <p class="mbr-text mbr-fonts-style mbr-white align-center display-4">© Copyright 2019&nbsp;<strong>Joyleaf</strong>
-                    <br>All Rights Reserved</p>
+                    <br>Rights Reserved<br><br>Credit to PO_Design</p>
             </div>
         </div>
     </section>
