added privacy policy

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                         <h5 class="mbr-fonts-style mbr-bold mbr-pb-3 title-column display-4 align-left">JOYLEAF</h5>
                         <div class="b-links-1 align-left">
                                 <p class="text-column mbr-fonts-style mbr-regular mbr-py-1 display-4"><a href="terms" class="text-info">Terms and Conditions</a></p>
-                                <p class="text-column mbr-fonts-style mbr-regular mbr-py-1 display-4"><a class="text-info">Privacy Policy</a></p>
+                                <p class="text-column mbr-fonts-style mbr-regular mbr-py-1 display-4"><a href="privacy" class="text-info">Privacy Policy</a></p>
                                 <p class="text-column mbr-fonts-style mbr-regular mbr-py-1 display-4"></p>
                             </div>
                         <!-- Content-column -->
