--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         <div class="row download" style="display: flex;">
                             <div class="column" id="badge" style="margin-right: 20px">
                                 <div class="mbr-pt-1 align-center">
-                                    <a href="https://www.apple.com/ca/ios/app-store/" target="_blank" class=""><img src="assets/images/app-store.svg" alt="Download on the App Store" style="width: auto; height: 60px;"></a>
+                                    <a href="https://apps.apple.com/us/app/joyleaf/id1476210065?ls=1" target="_blank" class=""><img src="assets/images/app-store.svg" alt="Download on the App Store" style="width: auto; height: 60px;"></a>
                                 </div>
                             </div>
                             <div class="column" id="badge">
