--- a/index.html
+++ b/index.html
@@ -153,13 +153,13 @@
                       </div>
                     <div class="vertical-download">
                       <div class="mbr-pt-1 align-center" style="margin-bottom: 10px">
-                        <a href="https://www.apple.com/ca/ios/app-store/" target="_blank" class="">
-                          <img src="assets/images/app-store.svg" alt="Download on the App Store" style="width: auto; height: 60px;">
+                        <a href="https://apps.apple.com/us/app/joyleaf/id1476210065?ls=1" target="_blank" class="">
+                          <img src="assets/images/app-store.svg" alt="Download on the App Store" style="width: auto; height: 50px;">
                         </a>
                       </div>
                       <div class="mbr-pt-1 align-center">
                         <a href="https://play.google.com/store?hl=en" target="_blank" class="">
-                          <img src="assets/images/play-store.svg" alt="Download on the Play Store" style="width: auto; height: 60px;">
+                          <img src="assets/images/play-store.svg" alt="Download on the Play Store" style="width: auto; height: 50px;">
                         </a>
                       </div>
                     </div>
