--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
         <!-- Container -->
         <div class="container">
             <div class="main-wrapper mbr-flex mbr-column flex-al-c">
+                <img class="header-logo-img" src="assets/images/logo.png" alt="" title="">
                 <div class="row">
                     <div class="col-left">
                         <img class="custom-header-img" src="assets/images/header.png" alt="" title="" style="margin-right: 75px">
