header fix for mobile done

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         <!-- Titles -->
                         <div class="title-block mbr-py-3 mbr-white">
                             <h1 class="mbr-white mbr-fonts-style mbr-bold display-1" style="color: #ffffff">Reach new heights</h1>
-                            <h1 class="mbr-white mbr-fonts-style mbr-bold display-1" style="margin-top: 20px; margin-bottom: 20px">with Joyleaf</h1>
+                            <h1 class="mbr-white mbr-fonts-style mbr-bold display-1" style="margin-top: 20px; margin-bottom: 30px">with Joyleaf</h1>
                         </div>
                         <!-- Button-link -->
                         <div class="row download" style="display: flex;">
@@ -131,7 +131,7 @@
                       </div>
                       <div class="mbr-pt-1 align-center">
                         <a href="https://play.google.com/store?hl=en" target="_blank" class="">
-                          <img src="assets/images/play-store.svg" alt="Download on the Play Store" style="width: auto; height: 60px;">
+                          <img src="assets/images/play-store.svg" alt="Download on the Play Store" style="width: auto; height: 60px; margin-bottom: 50px">
                         </a>
                       </div>
                     </div>
