--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         <section class="footer4 cid-rvsxxgWbtZ" id="footer4-h">
             <div class="footer-container container">
                 <div class="copyright mbr-px-2 mbr-flex mbr-jc-c">
-                    <p class="mbr-text mbr-fonts-style mbr-white align-center display-4">© Copyright 2019&nbsp;<strong>Joyleaf</strong><br>All Rights Reserved<br><br>Credit to PO_Design</p>
+                    <p class="mbr-text mbr-fonts-style mbr-white align-center display-4">© Copyright 2019 Joyleaf</strong><br>All Rights Reserved<br><br>Credit to PO_Design</p>
                 </div>
             </div>
         </section>
